k8s/ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  namespace: sentiment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      containers:
        - name: ai
          image: localhost:5000/ai-sentiment:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
